Add .gitignore handling to setup-project.sh
- Automatically removes deployment files from .gitignore if they exist
- Adds comments explaining these files must NOT be ignored for CI/CD
- Creates a basic .gitignore if none exists (with deployment files commented)
- This prevents the CI/CD Docker build failures we encountered

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -26,7 +26,7 @@ COPY . .
 # Create container-specific MXCP configuration
 COPY deployment/mxcp-site-docker.yml ./mxcp-site.yml
 COPY deployment/profiles-docker.yml ./profiles.yml
-COPY deployment/mxcp-user-config.yml.template /home/mxcp/.mxcp/config.yml
+COPY deployment/mxcp-user-config.yml /home/mxcp/.mxcp/config.yml
 
 # Install just task runner (needs root for /usr/local/bin)
 RUN curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
