--- a/deployment/mxcp-user-config.yml.template
+++ b/deployment/mxcp-user-config.yml.template
@@ -9,14 +9,14 @@ transport:
 
 # LLM Models Configuration
 models:
-  gpt-4o:
-    provider: openai
-    api_key: ${OPENAI_API_KEY}
-    model: gpt-4o
-  gpt-3.5-turbo:
-    provider: openai
-    api_key: ${OPENAI_API_KEY}
-    model: gpt-3.5-turbo
+  default: gpt-4o
+  models:
+    gpt-4o:
+      type: openai
+      api_key: ${OPENAI_API_KEY}
+    gpt-3.5-turbo:
+      type: openai
+      api_key: ${OPENAI_API_KEY}
 
 # Project configuration with custom secrets example
 projects:
