--- a/deployment/mxcp-user-config.yml.template
+++ b/deployment/mxcp-user-config.yml.template
@@ -14,6 +14,13 @@ models:
     gpt-4o:
       type: openai
       api_key: ${OPENAI_API_KEY}
+    gpt-3.5-turbo:
+      type: openai
+      api_key: ${OPENAI_API_KEY}
+    gpt-4.1:
+      type: openai
+      api_key: ${OPENAI_API_KEY}
+      model: gpt-4o  # Map to gpt-4o since gpt-4.1 doesn't exist
 
 # Project configuration with custom secrets example
 projects:
