Remove invalid model field from mxcp-user-config
- Removed the 'model:' field from gpt-4.1 config (MXCP doesn't support it)
- Actually, removed gpt-4.1 entirely since it's not a real model
- Updated README to not suggest model mapping
- MXCP config only supports real model names, not aliases

--- a/deployment/mxcp-user-config.yml.template
+++ b/deployment/mxcp-user-config.yml.template
@@ -14,10 +14,9 @@ models:
     gpt-4o:
       type: openai
       api_key: ${OPENAI_API_KEY}
-    gpt-4.1:
+    gpt-3.5-turbo:
       type: openai
       api_key: ${OPENAI_API_KEY}
-      model: gpt-4o  # Map to gpt-4o since gpt-4.1 doesn't exist
 
 # Project configuration with custom secrets example
 projects:
