--- a/.squirro/setup-for-squirro.sh.template
+++ b/.squirro/setup-for-squirro.sh.template
@@ -67,41 +67,40 @@ echo "✅ Template files created!"
 echo ""
 echo "🚨 CRITICAL: You MUST edit these files before deployment:"
 echo ""
-echo "📝 Required edits for {{PROJECT_NAME}} MXCP Server:"
+echo "📝 Required configuration for {{PROJECT_NAME}} MXCP Server:"
 echo ""
-echo "📝 Required edits:"
-echo "1. Edit deployment/config.env:"
-echo "   - Replace AWS_ACCOUNT_ID with your AWS account"
-echo "   - Update AWS_REGION for your preferred region"
-echo "   - Change ECR_REPOSITORY and SERVICE_NAME for Squirro"
+echo "1. Review deployment/config.env:"
+echo "   - Contains default AWS configuration"
+echo "   - Edit if you need different defaults"
+echo "   - Values can be overridden by GitHub Variables"
 echo ""
-echo "2. Edit .github/workflows/deploy-eks.yml:"
-echo "   - Replace YOUR_AWS_ACCOUNT_ID with actual account ID"
-echo "   - Replace squirro-cluster with actual EKS cluster name"
-echo "   - Update service names and namespaces"
-echo "   - Customize resource limits and configurations"
+echo "2. Configure GitHub Variables (optional overrides):"
+echo "   - AWS_ACCOUNT_ID (override config.env value)"
+echo "   - AWS_REGION (override config.env value)"
+echo "   - ECR_REPOSITORY (override config.env value)"
 echo ""
-echo "3. Edit profiles-squirro.yml:"
+echo "3. Configure GitHub Secrets (required):"
+echo "   - AWS_ACCESS_KEY_ID (for ECR push access)"
+echo "   - AWS_SECRET_ACCESS_KEY (for ECR push access)"
+echo "   - MXCP_DATA_ACCESS_KEY_ID (if using S3 data)"
+echo "   - MXCP_DATA_SECRET_ACCESS_KEY (if using S3 data)"
+echo "   - OPENAI_API_KEY (for LLM functionality)"
+echo "   - ANTHROPIC_API_KEY (optional)"
+echo ""
+echo "4. Edit profiles-squirro.yml:"
 echo "   - Update database paths for Squirro environment"
 echo "   - Configure connection settings"
 echo ""
-echo "3. Configure GitHub secrets in your forked repository:"
-echo "   - AWS_ACCOUNT_ID (your actual AWS account)"
-echo "   - EKS_CLUSTER_NAME (your actual cluster name)"
-echo "   - AWS_ACCESS_KEY_ID (for EKS access)"
-echo "   - AWS_SECRET_ACCESS_KEY (for EKS access)"
-echo "   - OPENAI_API_KEY (for testing - optional)"
-echo ""
-echo "4. Test locally first:"
+echo "5. Test locally first:"
 echo "   just full-pipeline  # Run complete ETL and tests"
 echo "   just test-all      # Run all tests including evals"
 echo ""
-echo "5. Only after customization, commit and push:"
+echo "6. Only after customization, commit and push:"
 echo "   git add -A"
-echo "   git commit -m 'Configure for Squirro EKS deployment'"
+echo "   git commit -m 'Configure for Squirro deployment'"
 echo "   git push origin main"
 echo ""
-echo "6. To get updates from RAW Labs:"
+echo "7. To get updates from RAW Labs:"
 echo "   ./.squirro/merge-from-raw.sh"
 echo ""
 echo "⚠️  DO NOT deploy without editing the template files first!"
