Fix dbt deps command for API projects
- Added {{DBT_DEPS_COMMAND}} placeholder to justfile.template
- For data projects: runs 'dbt deps'
- For API projects: echoes message (no dbt dependencies)
- Updated setup-project.sh to handle the new placeholder
- Updated README.md documentation

This fixes the CI/CD error where API projects were trying to run dbt deps
without a dbt_project.yml file.

--- a/justfile.template
+++ b/justfile.template
@@ -10,7 +10,7 @@ download:
 # Build dbt models from downloaded data
 build-models:
     @echo "🏗️ Building dbt models..."
-    dbt deps
+    {{DBT_DEPS_COMMAND}}
     {{DBT_RUN_COMMAND}}
     @echo "✅ dbt models built successfully"
 
