Add CPU_SIZE and MEMORY_SIZE support to Squirro workflow
- Updated build-and-push-to-ecr.yml.template to handle CPU/Memory variables
- Added support for GitHub Variables override (same pattern as main workflow)
- Updated documentation in .squirro/README.md
- Updated setup-for-squirro.sh.template instructions

This ensures Squirro deployments can also benefit from configurable
resource allocation without hardcoding values.

--- a/.squirro/setup-for-squirro.sh.template
+++ b/.squirro/setup-for-squirro.sh.template
@@ -78,6 +78,8 @@ echo "2. Configure GitHub Variables (optional overrides):"
 echo "   - AWS_ACCOUNT_ID (override config.env value)"
 echo "   - AWS_REGION (override config.env value)"
 echo "   - ECR_REPOSITORY (override config.env value)"
+echo "   - CPU_SIZE (override config.env value, e.g., '4 vCPU')"
+echo "   - MEMORY_SIZE (override config.env value, e.g., '8 GB')"
 echo ""
 echo "3. Configure GitHub Secrets (required):"
 echo "   - AWS_ACCESS_KEY_ID (for ECR push access)"
