Major refactor: Simplify secret management approach
BREAKING CHANGES:
- Removed secret build args from Dockerfile (OPENAI_API_KEY, etc.)
- Docker build now only runs basic config validation
- Full testing happens AFTER build with runtime secrets

Key changes:
1. Dockerfile:
   - Removed ARG/ENV for API keys
   - Only runs 'just test-config' during build
   - Keeps data access keys for build-time data download

2. Workflows (deploy.yml, Squirro):
   - Added project-specific env: block for secrets
   - Removed --build-arg for API keys
   - Added test step between build and push
   - Simplified secret injection (Docker inherits env)

3. Documentation:
   - Updated philosophy: .github is PROJECT-CUSTOMIZED
   - Added section on customizing secrets
   - Updated testing architecture (build vs runtime)
   - Clarified when tests run

4. Scripts:
   - setup-project.sh warns about workflow customization
   - Squirro setup updated with new instructions

5. Justfile:
   - Added test-build-safe target for Docker builds

This approach is simpler and more secure:
- No secrets in Docker images
- Each project lists only its needed secrets
- No complex template processing
- Clear separation of build vs runtime

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,17 @@ on:
           - production
           - staging
 
-# Configuration loaded from deployment/config.env with GitHub Variables as overrides
+# Project-specific environment variables
+# TODO: Add your project's secrets here
+env:
+  # Example secrets (uncomment and modify for your project):
+  # OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY || '' }}
+  # ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY || '' }}
+  # VERTEC_API_KEY: ${{ secrets.VERTEC_API_KEY || '' }}
+  
+  # Data access for build (if downloading data from S3)
+  MXCP_DATA_ACCESS_KEY_ID: ${{ secrets.MXCP_DATA_ACCESS_KEY_ID || '' }}
+  MXCP_DATA_SECRET_ACCESS_KEY: ${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY || '' }}
 
 jobs:
   check-secrets:
@@ -190,13 +200,25 @@ jobs:
         docker build -f deployment/Dockerfile \
           --build-arg MXCP_DATA_ACCESS_KEY_ID=${{ secrets.MXCP_DATA_ACCESS_KEY_ID }} \
           --build-arg MXCP_DATA_SECRET_ACCESS_KEY=${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }} \
-          --build-arg OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
           -t ${{ env.ECR_REPOSITORY }}:${{ github.sha }} .
         
         # Tag for ECR
         docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
         docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:latest
-        
+    
+    - name: Test Docker image with secrets
+      run: |
+        echo "🧪 Running full test suite with secrets..."
+        # Docker automatically inherits env vars from the workflow env block
+        docker run --rm \
+          --env-file deployment/config.env \
+          ${{ env.ECR_REPOSITORY }}:${{ github.sha }} \
+          just test-all
+        echo "✅ All tests passed!"
+    
+    - name: Push to ECR
+      run: |
+        echo "📤 Pushing tested image to ECR..."
         # Push to ECR
         docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
         docker push ${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:latest
