--- a/.squirro/setup-for-squirro.sh.template
+++ b/.squirro/setup-for-squirro.sh.template
@@ -81,28 +81,34 @@ echo "   - ECR_REPOSITORY (override config.env value)"
 echo "   - CPU_SIZE (override config.env value, e.g., '4 vCPU')"
 echo "   - MEMORY_SIZE (override config.env value, e.g., '8 GB')"
 echo ""
-echo "3. Configure GitHub Secrets (required):"
+echo "3. Customize workflow secrets:"
+echo "   - Edit .github/workflows/build-and-push-to-ecr.yml"
+echo "   - Add your project's secrets to the env: block"
+echo "   - Example:"
+echo "       env:"
+echo "         OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY || '' }}"
+echo "         YOUR_API_KEY: \${{ secrets.YOUR_API_KEY || '' }}"
+echo ""
+echo "4. Configure GitHub Secrets (required):"
 echo "   - AWS_ACCESS_KEY_ID (for ECR push access)"
 echo "   - AWS_SECRET_ACCESS_KEY (for ECR push access)"
-echo "   - MXCP_DATA_ACCESS_KEY_ID (if using S3 data)"
-echo "   - MXCP_DATA_SECRET_ACCESS_KEY (if using S3 data)"
-echo "   - OPENAI_API_KEY (for LLM functionality)"
+echo "   - Plus any secrets you added to the env: block"
 echo "   - ANTHROPIC_API_KEY (optional)"
 echo ""
-echo "4. Edit profiles-squirro.yml:"
+echo "5. Edit profiles-squirro.yml:"
 echo "   - Update database paths for Squirro environment"
 echo "   - Configure connection settings"
 echo ""
-echo "5. Test locally first:"
+echo "6. Test locally first:"
 echo "   just full-pipeline  # Run complete ETL and tests"
 echo "   just test-all      # Run all tests including evals"
 echo ""
-echo "6. Only after customization, commit and push:"
+echo "7. Only after customization, commit and push:"
 echo "   git add -A"
 echo "   git commit -m 'Configure for Squirro deployment'"
 echo "   git push origin main"
 echo ""
-echo "7. To get updates from RAW Labs:"
+echo "8. To get updates from RAW Labs:"
 echo "   ./.squirro/merge-from-raw.sh"
 echo ""
 echo "⚠️  DO NOT deploy without editing the template files first!"
