--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -44,10 +44,6 @@ ARG MXCP_DATA_SECRET_ACCESS_KEY
 ENV AWS_ACCESS_KEY_ID=$MXCP_DATA_ACCESS_KEY_ID
 ENV AWS_SECRET_ACCESS_KEY=$MXCP_DATA_SECRET_ACCESS_KEY
 
-# API keys for testing (needed for test-evals)
-ARG OPENAI_API_KEY
-ENV OPENAI_API_KEY=$OPENAI_API_KEY
-
 # Prepare project data using justfile (supports different data strategies)
 RUN mkdir -p ./data ./logs
 # Use justfile for flexible data preparation - supports S3, API, or static data
@@ -56,14 +52,13 @@ RUN just prepare-build
 # Create symlink for mxcp that tests expect
 RUN mkdir -p .env/bin && ln -s /usr/local/bin/mxcp .env/bin/mxcp
 
-# Run all 3 levels of testing during build
-# This ensures only tested code gets deployed
-RUN just test-all || (echo "❌ Tests failed during Docker build" && exit 1)
+# Run only build-safe tests during build (no API keys required)
+# Full testing happens after build with runtime secrets
+RUN just test-config || (echo "❌ Config validation failed during Docker build" && exit 1)
 
-# Clear sensitive credentials after tests (security)
+# Clear data access credentials after use (security)
 ENV AWS_ACCESS_KEY_ID=""
 ENV AWS_SECRET_ACCESS_KEY=""
-ENV OPENAI_API_KEY=""
 
 # Ensure directories have correct permissions
 RUN chmod -R 755 ./data ./logs
