Move data preparation outside Docker build
BREAKING CHANGE: Data is now prepared BEFORE Docker build, not during

Benefits:
- Smaller Docker images (no data download tools needed)
- Faster builds (data prep happens once, not on every build)
- Better security (no AWS credentials in Docker build context)
- Cleaner separation of concerns

Changes:
1. Dockerfile:
   - Removed ARG/ENV for data access credentials
   - Removed 'just prepare-build' step
   - Only creates directories and runs config validation

2. GitHub Workflows:
   - Added Python/just/dependencies setup before Docker build
   - Added 'Prepare data before build' step
   - Removed --build-arg for data credentials
   - Data is prepared in the workflow, then copied into image

3. Documentation:
   - Updated to explain new data preparation approach
   - Clarified that data prep happens outside Docker

Migration notes:
- If you have custom Dockerfiles, remove data download steps
- Move data preparation to your CI/CD pipeline
- Ensure data/ directory exists before Docker build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -186,6 +186,32 @@ jobs:
         echo "MEMORY_SIZE=\"${{ env.MEMORY_SIZE }}\"" >> .github/config.env
     
     
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    
+    - name: Install just
+      run: |
+        curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
+        echo "/usr/local/bin" >> $GITHUB_PATH
+    
+    - name: Install dependencies
+      run: |
+        pip install -r deployment/requirements.txt
+    
+    - name: Prepare data before build
+      run: |
+        echo "📥 Preparing data outside Docker..."
+        # Export credentials for data download
+        export AWS_ACCESS_KEY_ID=${{ secrets.MXCP_DATA_ACCESS_KEY_ID }}
+        export AWS_SECRET_ACCESS_KEY=${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }}
+        
+        # Download and prepare data
+        just prepare-build
+        
+        echo "✅ Data prepared successfully"
+    
     - name: Build and push Docker image
       run: |
         # Login to ECR
@@ -196,10 +222,8 @@ jobs:
         aws ecr describe-repositories --repository-names ${{ env.ECR_REPOSITORY }} --region ${{ env.AWS_REGION }} || \
         aws ecr create-repository --repository-name ${{ env.ECR_REPOSITORY }} --region ${{ env.AWS_REGION }} --image-scanning-configuration scanOnPush=true
         
-        # Build from project root with deployment/Dockerfile and data credentials
+        # Build from project root with deployment/Dockerfile (no data credentials needed)
         docker build -f deployment/Dockerfile \
-          --build-arg MXCP_DATA_ACCESS_KEY_ID=${{ secrets.MXCP_DATA_ACCESS_KEY_ID }} \
-          --build-arg MXCP_DATA_SECRET_ACCESS_KEY=${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }} \
           -t ${{ env.ECR_REPOSITORY }}:${{ github.sha }} .
         
         # Tag for ECR
