--- a/.squirro/workflows/build-and-push-to-ecr.yml.template
+++ b/.squirro/workflows/build-and-push-to-ecr.yml.template
@@ -161,14 +161,38 @@ jobs:
         aws ecr describe-repositories --repository-names ${{ env.ECR_REPOSITORY }} --region ${{ env.AWS_REGION }} || \
         aws ecr create-repository --repository-name ${{ env.ECR_REPOSITORY }} --region ${{ env.AWS_REGION }}
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    
+    - name: Install just
+      run: |
+        curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
+        echo "/usr/local/bin" >> $GITHUB_PATH
+    
+    - name: Install dependencies
+      run: |
+        pip install -r deployment/requirements.txt
+    
+    - name: Prepare data before build
+      run: |
+        echo "📥 Preparing data outside Docker..."
+        # Export credentials for data download
+        export AWS_ACCESS_KEY_ID=${{ secrets.MXCP_DATA_ACCESS_KEY_ID }}
+        export AWS_SECRET_ACCESS_KEY=${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }}
+        
+        # Download and prepare data
+        just prepare-build
+        
+        echo "✅ Data prepared successfully"
+    
     - name: Build and push Docker image
       run: |
         echo "🐳 Building Docker image for Squirro..."
         echo "📦 Target ECR: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}"
         
         docker build -f deployment/Dockerfile \
-          --build-arg MXCP_DATA_ACCESS_KEY_ID="${{ secrets.MXCP_DATA_ACCESS_KEY_ID }}" \
-          --build-arg MXCP_DATA_SECRET_ACCESS_KEY="${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }}" \
           -t ${{ env.ECR_REPOSITORY }}:${{ github.sha }} .
         
         docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
