Fix misleading step names in workflows
- Renamed 'Build and push Docker image' to 'Build Docker image and prepare ECR' in main workflow
- Renamed 'Build and push Docker image' to 'Build Docker image' in Squirro workflow
- Makes it clear that the actual push happens in a separate step after testing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -212,7 +212,7 @@ jobs:
         
         echo "✅ Data prepared successfully"
     
-    - name: Build and push Docker image
+    - name: Build Docker image and prepare ECR
       run: |
         # Login to ECR
         aws ecr get-login-password --region ${{ env.AWS_REGION }} | \
