--- a/.squirro/workflows/build-and-push-to-ecr.yml.template
+++ b/.squirro/workflows/build-and-push-to-ecr.yml.template
@@ -173,19 +173,26 @@ jobs:
     
     - name: Install dependencies
       run: |
+        # Install project requirements if they exist
+        if [ -f requirements.txt ]; then
+          echo "📦 Installing project dependencies..."
+          pip install -r requirements.txt
+        fi
+        # Install deployment requirements
         pip install -r deployment/requirements.txt
     
     - name: Prepare data before build
       run: |
         echo "📥 Preparing data outside Docker..."
-        # Export credentials for data download
+        # Export credentials for data download (if needed)
         export AWS_ACCESS_KEY_ID=${{ secrets.MXCP_DATA_ACCESS_KEY_ID }}
         export AWS_SECRET_ACCESS_KEY=${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }}
         
         # Download and prepare data
+        # This will be a no-op for API projects (just creates directories)
         just prepare-build
         
-        echo "✅ Data prepared successfully"
+        echo "✅ Data preparation complete"
     
     - name: Build Docker image
       run: |
