Fix dbt profile location in workflows
- Set DBT_PROFILES_DIR to deployment directory
- This tells dbt where to find profiles-docker.yml
- Fixes 'Could not find profile' error during data preparation

--- a/.squirro/workflows/build-and-push-to-ecr.yml.template
+++ b/.squirro/workflows/build-and-push-to-ecr.yml.template
@@ -188,6 +188,9 @@ jobs:
         export AWS_ACCESS_KEY_ID=${{ secrets.MXCP_DATA_ACCESS_KEY_ID }}
         export AWS_SECRET_ACCESS_KEY=${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }}
         
+        # Set dbt profiles directory
+        export DBT_PROFILES_DIR=${{ github.workspace }}/deployment
+        
         # Download and prepare data
         # This will be a no-op for API projects (just creates directories)
         just prepare-build
