--- a/.squirro/workflows/build-and-push-to-ecr.yml.template
+++ b/.squirro/workflows/build-and-push-to-ecr.yml.template
@@ -189,7 +189,10 @@ jobs:
         export AWS_SECRET_ACCESS_KEY=${{ secrets.MXCP_DATA_SECRET_ACCESS_KEY }}
         
         # Set dbt profiles directory
-        export DBT_PROFILES_DIR=${{ github.workspace }}/deployment
+        export DBT_PROFILES_DIR=${{ github.workspace }}
+        
+        # Copy profiles-docker.yml to profiles.yml for dbt to find it
+        cp deployment/profiles-docker.yml profiles.yml
         
         # Download and prepare data
         # This will be a no-op for API projects (just creates directories)
@@ -211,16 +214,11 @@ jobs:
     - name: Test Docker image with secrets
       run: |
         echo "🧪 Running full test suite with secrets..."
-        # Create env file with all current environment variables that might be needed
-        cat > test.env << EOF
-        OPENAI_API_KEY=$OPENAI_API_KEY
-        ANTHROPIC_API_KEY=$ANTHROPIC_API_KEY
-        VERTEC_API_KEY=$VERTEC_API_KEY
-        EOF
+        # Pass ALL environment variables to Docker (including those from env: block)
+        env > test.env
         
-        # Run tests with both config.env and test.env
+        # Run tests with environment variables
         docker run --rm \
-          --env-file deployment/config.env \
           --env-file test.env \
           ${{ env.ECR_REPOSITORY }}:${{ github.sha }} \
           just test-all
