feat: Implement environment validation with Docker labels
- Add enhanced Docker labels with JSON metadata for runtime and CI/CD variables
- Create env-validator.py for cross-file consistency checking
- Add runtime validation to start.sh
- Fix deploy-app-runner.sh to only pass runtime variables (remove MXCP_DATA_*)
- Add validation steps to both GitHub workflows
- Update README.md with self-documenting environment approach
- Delete redundant ENVIRONMENT.md.template
- Add validate-env task to justfile with critical path dependencies

This provides clear separation between CI/CD and runtime secrets, with automatic validation to catch configuration errors early.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,6 +104,11 @@ jobs:
         echo "📝 Validating YAML configurations..."
         python -c "import yaml; yaml.safe_load(open('mxcp-site.yml')); print('✅ mxcp-site.yml is valid')"
         python -c "import yaml, glob; [yaml.safe_load(open(f)) for f in glob.glob('tools/*.yml')]; print('✅ All tool configurations valid')"
+    
+    - name: Validate environment consistency
+      run: |
+        echo "🔍 Checking environment variable consistency..."
+        python deployment/env-validator.py
         echo "✅ Pre-flight checks passed"
 
   deploy:
