docs: compact README, add ToC, Squirro guide link; ops: jq prereq; chore: env-validator Squirro skip; chore: just validate target; docs: Squirro-only guide updates

--- a/justfile.template
+++ b/justfile.template
@@ -80,6 +80,10 @@ validate-env:
     @echo "🔍 Validating environment variable consistency..."
     @python deployment/env-validator.py || (echo "⚠️  Environment validation failed but continuing..."; true)
 
+# Combined validation (config + env)
+validate: validate-config validate-env
+    @echo "✅ All validations passed"
+
 # Full CI tests with data (for deploy workflow)
 ci-tests-with-data: test-config download build-models test-data
     @echo "✅ Full CI tests with data passed"
